--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 * {
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 body {
