feat: :sparkles: add footer

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,9 @@
 }
 
 body {
-  background: hsla(33 52% 49% / .6);
+  background: hsla(33 52% 49% / 0.6);
   margin: 0;
   padding: 0;
+
+  font-family: 'Inter', sans-serif;
 }
