feat: :sparkles: add header

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,4 +3,8 @@
   width: clamp(300px, 100vw, 1144px);
   margin: 0 auto;
   background-color: white;
+
+  > *:not(app-footer) {
+    margin-inline: 56px;
+  }
 }
