--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,19 +1,30 @@
+@use 'media-queries';
+@use 'color';
+
 :host {
   display: block;
 }
 
 header {
   display: flex;
-  gap: 16px;
+  gap: 0.5rem;
   align-items: center;
+  padding-top: 1.5rem;
 
-  padding-top: 32px;
+  @include media-queries.gt-sm {
+    gap: 1rem;
+    padding-top: 2rem;
+  }
 }
 
 h1 {
-  color: hsla(33, 52%, 49%, 1);
+  color: map-get(color.$accent, 500);
   font-weight: 700;
-  font-size: 48px;
-  line-height: 48px;
+  font-size: 1.5rem;
   margin: 0;
+
+  @include media-queries.gt-sm {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
 }
