feat: :sparkles: add header and fix typo (#9)
* feat: :sparkles: add header

* feat: :sparkles: add header

* feat: :sparkles: add header

* fix: typo in title

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,17 @@
+@use 'media-queries';
+@use 'color';
+
 :host {
   display: block;
   width: clamp(300px, 100vw, 1144px);
   margin: 0 auto;
-  background-color: white;
+  background-color: map-get(color.$gray, 100);
+
+  > *:not(app-footer) {
+    margin-inline: 1rem;
+
+    @include media-queries.gt-sm {
+      margin-inline: 3.5rem;
+    }
+  }
 }
