--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+@use 'media-queries';
+@use 'color';
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background: hsla(33 52% 49% / 0.6);
+  background-color: map-get(color.$accent, 300);
   margin: 0;
   padding: 0;
 
   font-family: 'Inter', sans-serif;
+}
+
+hr {
+  margin-top: 0.75rem;
+  border: 1px solid map-get(color.$gray, 800);
+
+  @include media-queries.gt-sm {
+    margin-top: 1.25rem;
+  }
 }
