--- a/src/app/components/header-logo/header-logo.component.scss
+++ b/src/app/components/header-logo/header-logo.component.scss
@@ -1,10 +1,11 @@
 @use 'media-queries';
 
-img {
+svg {
   aspect-ratio: 1/1;
   width: 2rem;
 
   @include media-queries.gt-sm {
     width: 4rem;
+    height: 4rem;
   }
 }
