refactor: :lipstick: set up a web mixin

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,7 @@
   > *:not(app-footer) {
     margin-inline: 1rem;
 
-    @include media-queries.gt-sm {
+    @include media-queries.web {
       margin-inline: 3.5rem;
     }
   }
