--- a/src/app/components/header-logo/header-logo.component.scss
+++ b/src/app/components/header-logo/header-logo.component.scss
@@ -4,7 +4,7 @@ svg {
   aspect-ratio: 1/1;
   width: 2rem;
 
-  @include media-queries.gt-sm {
+  @include media-queries.web {
     width: 4rem;
     height: 4rem;
   }
