--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -90,3 +90,9 @@ $screen-xl-max: 5000px;
     @content;
   }
 }
+
+@mixin web {
+  @media only screen and (min-width: #{$screen-sm-min}) and (pointer: fine) {
+    @content;
+  }
+}
