--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -14,7 +14,7 @@ footer {
   border-color: hsl(0 0 0.81);
   border-top: solid 1px;
 
-  @include media-queries.gt-sm() {
+  @include media-queries.web {
     height: 8rem;
   }
 }
