--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@ hr {
   margin-top: 0.75rem;
   border: 1px solid map-get(color.$gray, 800);
 
-  @include media-queries.gt-sm {
+  @include media-queries.web {
     margin-top: 1.25rem;
   }
 }
