fix: storybook CI build

--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -2,6 +2,8 @@
   {{ label }}
   <div class="input-wrapper">
     <input placeholder="{{ placeholder }}" />
-    <div *ngIf="!!unitLabel" class="input-after">{{ unitLabel }}</div>
+    <div *ngIf="!!unitLabel" class="input-after">
+      <span> {{ unitLabel }} </span>
+    </div>
   </div>
 </label>
