--- a/src/app/components/form/form-field/form-field.component.scss
+++ b/src/app/components/form/form-field/form-field.component.scss
@@ -14,9 +14,12 @@ $gray-background: map-get(
   $key: 850,
 );
 
+$padding-inline: 14px;
+$padding-block: 12px;
+
 @mixin internal-padding {
-  padding-inline: 14px;
-  padding-block: 12px;
+  padding-inline: $padding-inline;
+  padding-block: $padding-block;
 }
 
 $border-radius: 8px;
@@ -45,18 +48,39 @@ $border-radius: 8px;
     color: $regular-color;
   }
 
-  input {
+  .app-input {
     flex: 1 1 0;
     outline: none;
     border: none;
-    padding: 0;
 
     background-color: transparent;
   }
+  input {
+    padding: 0;
+  }
+  select.app-select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    appearance: none;
 
-  & > *:not(label, app-selector-button) {
+    &::-ms-expand {
+      display: none;
+    }
+
+    & + app-chevron {
+      position: absolute;
+      top: calc($padding-block + 0.5em - 0.5 * 0.5625rem);
+      right: $padding-inline;
+      pointer-events: none;
+      width: 1rem;
+    }
+  }
+
+  & > *:not(label, app-chevron) {
     @include internal-padding;
   }
+
   & > * {
     font-size: 0.875rem;
     line-height: 1rem;
