--- a/src/app/components/form/form-field/form-field.component.scss
+++ b/src/app/components/form/form-field/form-field.component.scss
@@ -22,6 +22,13 @@ $padding-block: 12px;
   padding-block: $padding-block;
 }
 
+@mixin form-ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 100%;
+}
+
 $border-radius: 8px;
 
 .form-field-wrapper {
@@ -46,6 +53,7 @@ $border-radius: 8px;
     font-size: 0.875rem;
     line-height: 182%;
     color: $regular-color;
+    @include form-ellipsis;
   }
 
   .app-input {
@@ -74,6 +82,11 @@ $border-radius: 8px;
       right: $padding-inline;
       pointer-events: none;
       width: 1rem;
+    }
+
+    option {
+      margin-top: 20px;
+      background-color: dodgerblue;
     }
   }
 
