--- a/src/app/components/control/control-field/control-field.component.scss
+++ b/src/app/components/control/control-field/control-field.component.scss
@@ -84,6 +84,8 @@ $border-radius: 8px;
     -o-appearance: none;
     appearance: none;
 
+    padding-inline-end: calc(1rem + $padding-inline * 2);
+
     &::-ms-expand {
       display: none;
     }
@@ -91,7 +93,7 @@ $border-radius: 8px;
     & + app-chevron {
       position: absolute;
       top: calc($padding-block + 0.5em - 0.5 * 0.5625rem);
-      right: $padding-inline;
+      inset-inline-end: $padding-inline;
       pointer-events: none;
       width: 1rem;
     }
