feat(form): :sparkles: prepare form input

--- a/src/app/components/icon/chevron/chevron.component.html
+++ b/src/app/components/icon/chevron/chevron.component.html
@@ -3,7 +3,10 @@
   height="9"
   viewBox="0 0 14 9"
   fill="none"
-  xmlns="http://www.w3.org/2000/svg">
+  role="icon"
+  aria-labelledby="svgTitle svgDescription">
+  <title id="svgTitle">Chevron down</title>
+  <desc id="svgDescription">Chevron down icon</desc>
   <path
     d="M1 1L7 7L13 1"
     stroke="#404040"
