--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -2,6 +2,7 @@ $accent: (
   200: hsla(33, 52%, 20%, 1),
   300: hsla(33, 52%, 49%, 0.6),
   500: hsla(33, 52%, 49%, 1),
+  700: hsla(37, 48%, 95%, 1),
 );
 
 $gray: (
