--- a/src/app/form/form/form.component.html
+++ b/src/app/form/form/form.component.html
@@ -3,9 +3,9 @@
     <app-oven-selector></app-oven-selector>
     <app-recipe-selector></app-recipe-selector>
   </div>
-  <div class="row">
+  <!-- <div class="row">
     <app-oven-selector></app-oven-selector>
     <app-recipe-selector></app-recipe-selector>
     <app-recipe-selector></app-recipe-selector>
-  </div>
+  </div> -->
 </section>
