--- a/src/app/form/recipe-selector/recipe-selector.component.html
+++ b/src/app/form/recipe-selector/recipe-selector.component.html
@@ -1,5 +1,5 @@
 <app-control-field>
-  <label for="recipe-selector">Type of oven</label>
+  <label for="recipe-selector">Recipe</label>
   <select appSelect id="recipe-selector" [formControl]="control">
     <option *ngFor="let recipe of recipes$ | async" [value]="recipe.id">
       {{ recipe.title }}
