feat(recipe): :sparkles: add a recipe page with a path

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
 <hr />
 <app-form></app-form>
 <hr />
-<router-outlet></router-outlet>
+<div>
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
