--- a/src/app/form/dought-counter-selector/dought-counter-selector.component.html
+++ b/src/app/form/dought-counter-selector/dought-counter-selector.component.html
@@ -1,4 +1,9 @@
 <app-control-field>
   <label for="dough-count">Number of dought balls</label>
-  <input type="number" appInput id="dough-count" [formControl]="control" />
+  <input
+    type="number"
+    appInput
+    id="dough-count"
+    [formControl]="control"
+    min="1" />
 </app-control-field>
