--- a/src/app/form/dought-weight-selector/dought-weight-selector.component.html
+++ b/src/app/form/dought-weight-selector/dought-weight-selector.component.html
@@ -1,5 +1,11 @@
 <app-control-field>
   <label for="dough-weight">Dought ball weight</label>
-  <input appInput id="dough-weight" [formControl]="control" />
+  <input
+    type="number"
+    appInput
+    id="dough-weight"
+    [formControl]="control"
+    min="10"
+    step="10" />
   <span appInputAfter>g</span>
 </app-control-field>
