feat(recipe): :sparkles: add ngxs into dough

--- a/src/app/form/dough-counter-selector/dough-counter-selector.component.html
+++ b/src/app/form/dough-counter-selector/dough-counter-selector.component.html
@@ -1,5 +1,5 @@
 <app-control-field>
-  <label for="dough-count">Number of dought balls</label>
+  <label for="dough-count">Number of dough balls</label>
   <input
     type="number"
     appInput
