--- a/src/app/form/weight-unit-selector/weight-unit-selector.component.html
+++ b/src/app/form/weight-unit-selector/weight-unit-selector.component.html
@@ -1,7 +1,7 @@
 <app-control-field>
   <label for="oven-selector">Type of oven</label>
   <select appSelect id="oven-selector" [formControl]="control">
-    <option *ngFor="let weightType of weightMap" [value]="weightType.key">
+    <option *ngFor="let weightType of weightArray" [value]="weightType.key">
       {{ weightType.label }}
     </option>
   </select>
