feat(recipe): :sparkles: add ngxs into dough

--- a/src/app/form/dough-weight-selector/dough-weight-selector.component.html
+++ b/src/app/form/dough-weight-selector/dough-weight-selector.component.html
@@ -7,5 +7,5 @@
     [formControl]="control"
     min="10"
     step="10" />
-  <span appInputAfter [innerText]="weightUnit$ | async"></span>
+  <span appInputAfter>{{ weightUnit$ | async }}</span>
 </app-control-field>
