feat(recipe): :sparkles: add ngxs into dough

--- a/src/app/form/dough-weight-selector/dough-weight-selector.component.html
+++ b/src/app/form/dough-weight-selector/dough-weight-selector.component.html
@@ -1,11 +1,12 @@
 <app-control-field>
   <label for="dough-weight">Dough ball weight</label>
   <input
+    *ngIf="(weightUnitData$ | async)?.weight as weight"
     type="number"
     appInput
     id="dough-weight"
     [formControl]="control"
-    min="10"
-    step="10" />
+    [min]="weight?.min ?? 10"
+    [step]="weight?.step ?? 10" />
   <span appInputAfter>{{ weightUnit$ | async }}</span>
 </app-control-field>
