feat(component): :sparkles: add a mobile view for table

--- a/src/app/components/icon/chevron/chevron.component.html
+++ b/src/app/components/icon/chevron/chevron.component.html
@@ -4,7 +4,8 @@
   viewBox="0 0 14 9"
   fill="none"
   role="icon"
-  aria-labelledby="svgTitle svgDescription">
+  aria-labelledby="svgTitle svgDescription"
+  aria-hidden="true">
   <title id="svgTitle">Chevron down</title>
   <desc id="svgDescription">Chevron down icon</desc>
   <path
