--- a/src/app/recipe/ingredients/ingredients/ingredients.component.html
+++ b/src/app/recipe/ingredients/ingredients/ingredients.component.html
@@ -1,2 +1,4 @@
 <h2>Ingredients</h2>
-<app-table [data]="(tableData$ | async) ?? []"></app-table>
+<app-table
+  [data]="(tableData$ | async) ?? []"
+  caption="Ingredients"></app-table>
