--- a/src/app/components/control/control-field/control-field.component.scss
+++ b/src/app/components/control/control-field/control-field.component.scss
@@ -1,6 +1,9 @@
 @use 'color';
 
-$focus-color: purple;
+$focus-color: map-get(
+  $map: color.$accent,
+  $key: 200,
+);
 $regular-color: map-get(
   $map: color.$gray,
   $key: 200,
@@ -21,7 +24,8 @@ $white-background: map-get(
 $padding-inline: 14px;
 $padding-block: 12px;
 $transition-time: 250ms;
-$outline-size: 1px;
+$outline-width: 1px;
+$outline-focus-width: 2px;
 
 @mixin internal-padding {
   padding-inline: $padding-inline;
@@ -45,7 +49,7 @@ $border-radius: 8px;
   margin-top: 1.5rem;
   background-color: $white-background;
 
-  outline: $outline-size solid $regular-color;
+  outline: $outline-width solid $regular-color;
   border-radius: $border-radius;
   display: flex;
   flex-direction: row;
@@ -57,6 +61,7 @@ $border-radius: 8px;
   &:focus-within,
   &:focus-within .app-input-after {
     outline-color: $focus-color;
+    outline-width: $outline-focus-width;
   }
 
   label {
@@ -116,7 +121,7 @@ $border-radius: 8px;
 
   span.app-input-after {
     background-color: $gray-background;
-    outline: solid $regular-color $outline-size;
+    outline: solid $regular-color $outline-width;
     vertical-align: middle;
     @include outline-transition;
   }
