fix(component): :lipstick: update the mobile paddings in the table

--- a/src/app/components/table/table/table.component.html
+++ b/src/app/components/table/table/table.component.html
@@ -1,4 +1,7 @@
 <table [attr.aria-label]="caption">
+  <caption *ngIf="captionTemplate">
+    <ng-container [ngTemplateOutlet]="captionTemplate"></ng-container>
+  </caption>
   <thead>
     <app-header [unit]="unit"></app-header>
   </thead>
