--- a/src/app/components/table/table/table.component.scss
+++ b/src/app/components/table/table/table.component.scss
@@ -20,24 +20,26 @@ $header-gray-color: map-get(
     border-collapse: collapse;
     text-align: left;
 
-    caption {
-      visibility: collapse;
-    }
-
     .data-title,
     th {
       color: $header-gray-color;
       font-weight: 500;
     }
 
+    caption {
+      text-align: left;
+    }
+
     th,
     td {
       padding-inline: 0.75rem;
-      padding-block: 0.5rem;
+      padding-block: 0.25rem;
     }
 
     tr {
       background-color: inherit;
+      padding-block: 0.5rem;
+      display: block;
     }
 
     // Mobile view
@@ -59,6 +61,7 @@ $header-gray-color: map-get(
       th,
       td {
         display: table-cell;
+        padding-block: 0.5rem;
       }
 
       .data-title {
@@ -71,6 +74,10 @@ $header-gray-color: map-get(
 
       app-total-weight-row {
         display: contents;
+      }
+
+      tr {
+        display: table-row;
       }
 
       th {
