feat(component): :wheelchair: fix row scopes

--- a/src/app/components/table/row/row.component.html
+++ b/src/app/components/table/row/row.component.html
@@ -1,5 +1,5 @@
 <tr>
-  <td scope="row">{{ rowData.title }}</td>
+  <th scope="row">{{ rowData.title }}</th>
   <td>
     <div class="data-title">
       {{ (tableHeaders$ | async)!.get('bakers') }}
