--- a/src/app/form/dough-counter-selector/dough-counter-selector.component.html
+++ b/src/app/form/dough-counter-selector/dough-counter-selector.component.html
@@ -6,4 +6,5 @@
     id="dough-count"
     [formControl]="control"
     min="1" />
+  <app-error-message [control]="control"></app-error-message>
 </app-control-field>
